# ufsa2

./: .gitignore  404.html  LICENSE  Makefile  NOTICE  README.md  SEAL_LICENSE.py  TRACKER.md  dist.whitelist.txt  dist.whitelist.with_build.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tracker.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  seal-and-package.yml
build-artefacts/: concept_schemes.csv  concept_schemes.index.json  concepts.all.csv  concepts.all.json  cusip.concepts.json  database_schemas.csv  fhir_r4_condition.concepts.csv  fhir_r4_encounter.concepts.json  fhir_r4_medication.concepts.json  fhir_r4_observation.concepts.csv  fhir_r4_patient.concepts.json  fhir_r4_procedure.concepts.json  iana_mime_application.concepts.csv  iana_mime_application.concepts.json  iana_mime_image.concepts.json  iana_mime_text.concepts.csv  iana_mime_text.concepts.json  iana_mime_video.concepts.json  internal_dw_schema.concepts.csv  iso_3166_1_a2.concepts.json  iso_3166_2.concepts.csv  iso_4217.concepts.csv  mappings.csv  shopify_admin_order.concepts.csv  shopify_admin_order.concepts.json  shopify_customer.concepts.csv  shopify_customer.concepts.json  shopify_inventory_item.concepts.csv  shopify_inventory_item.concepts.json  software_components.csv
cv/cv-entries/: index.html
data/fixtures/: dw_schema.sql  sbom_example.json
docs/: index.md
docs/cv/: cv-entries.md
docs/ref/: 0_Federated Schema Architecture_ Falsification & Implementation.md  1_UFSA v2.0 Registry and Emitter Design.md  2_Profiles and Overlays.md  3_Identifier and Mapping Registries.md  4_UFSA2.1_SBOM_AST.md
docs/reference/: core.md
docs/research/: models.md  profiles_overlays_research.md
js/: mermaid-init.js
ref/0_Federated Schema Architecture_ Falsification & Implementation/: index.html
ref/1_UFSA v2.0 Registry and Emitter Design/: index.html
ref/2_Profiles and Overlays/: index.html
ref/3_Identifier and Mapping Registries/: index.html
ref/4_UFSA2.1_SBOM_AST/: index.html
reference/core/: index.html
reference/models/: index.html
research/0_Federated Schema Architecture_ Falsification & Implementation/: index.html
research/1_UFSA v2.0 Registry and Emitter Design/: index.html
research/profiles_overlays_research/: index.html
scripts/: export_public.sh  seal_package.py
search/: search_index.json
tests/: test_ast_sbom_extras.py  test_parsers.py  test_sbom_ast.py
ufsa_v2/: __init__.py  cli.py  core_models.py  engine.py  models.py
ufsa_v2/emitters/: __init__.py  csv_emitter.py  idmap_emitter.py  (+4 more)
(+55 files in other folders)
